--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
         </p>
     
     </p>
-    
+ 
  
   <div class="yo">
       <span class="yo1"><span id="u1">_</span>Ether Emporium & Bitcoin Bazaar<span id="u2">_</span></span>
       </div>
     </p>
-
+    <div class="getrich">
+      <span id="clickbait"> <span id="banker">Bankers</span> <span id="hate"> Hate</span><span id="him"> Him!</span> </span><br> <span class="getrich2">Get Rich With This<br> <span id="one"> One </span><span id="finger">☝️☝️</span> <br><span id="simple">
+        <span id="simple1">
+        Simple</span><span id="emoji">🤯🥺</span> </span><span id="trick">Trick! <br>👇🔑👇🔑👇🔑👇🔑👇💰💰💰💰</span></span>
+      <br> <span href="https://www.dafk.net/what/" id="topsecret">CLICK HERE 4 TOP SECRET TRICKS</span>
+      <img id="meme" src="https://i.kym-cdn.com/entries/icons/original/000/036/128/injusticecover.jpg"/>
+      </div>
+  
 <div class="wallet">
   <span class ="wallet2">
 Make your own crypto-wallet here!:
@@ -36,6 +43,7 @@ Make your own crypto-wallet here!:
 </span>
 </ul>
 </div>
+<br>
 <div class="stuff">
   <h1 id="story"><span id="our">Our</span> Story:</h1>
   <p id="body">Our humble beginnings start with you, dear reader. We are a simple cloud based company out of Salt Lake City, Utah; 
