--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@
       <span class="yo1"><span id="u1">_</span>Ether Emporium & Bitcoin Bazaar<span id="u2">_</span></span>
       </div>
     </p>
-    <div class="getrich">
-      <span id="clickbait"> <span id="banker">Bankers</span> <span id="hate"> Hate</span><span id="him"> Him!</span> </span><br> <span class="getrich2">Get Rich With This<br> <span id="one"> One </span><span id="finger">☝️☝️</span> <br><span id="simple">
-        <span id="simple1">
-        Simple</span><span id="emoji">🤯🥺</span> </span><span id="trick">Trick! <br>👇🔑👇🔑👇🔑👇🔑👇💰💰💰💰</span></span>
-      <br> <span href="https://www.dafk.net/what/" id="topsecret">CLICK HERE 4 TOP SECRET TRICKS</span>
-      <img id="meme" src="https://i.kym-cdn.com/entries/icons/original/000/036/128/injusticecover.jpg"/>
-      </div>
+    
+     
   
 <div class="wallet">
   <span class ="wallet2">
@@ -55,6 +50,15 @@ Make your own crypto-wallet here!:
  
 
 </div>
+<div class="getrich">
+  <span id="clickbait"> <span id="banker">Bankers</span> <span id="hate"> Hate</span><span id="him"> Him!</span> </span><br> 
+ 
+  <div class="getrich2">Get Rich With This<br> <span id="one"> One </span><span id="finger">☝️☝️</span> <br><span id="simple">
+    <span id="simple1">
+    Simple<br></span><span id="emoji">🤯🥺</span> </span><span id="trick">Trick! <br>👇🔑👇<br>🔑👇🔑<br>👇🔑👇<br>💰💰💰</span></div>
+  </div>
+  <br> <span href="https://www.dafk.net/what/" id="topsecret">CLICK HERE <br>4 TOP <br>SECRET <br>TRICKS</span>
+ 
 
 </body>
 
